Fix z-index issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,7 +45,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 10;
+	// z-index: 10;
 }
 
 #journal {
@@ -1142,6 +1142,7 @@ em {
     padding-left: 10px;
     padding-right: 16px;
     border-left: 2px solid LightGray;
+    z-index: 2000;
 }
 
 .recommendation-modal {
